added home_screen html and css

--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
-<<html>
+<html>
 <head>
   <title>Sports Quiz App</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
   <header>
-    <h1></h1>
-    <h3>Welcome to the Sports Quizz. This quiz contains 10 questions about various sports topics</h3>
+    <h1>Sports Quiz</h1>
+    <h3>Welcome to the Sports Quizz.<br> This quiz contains 10 questions about various sports topics</h3>
   </header>
   <main>
-    <img src="" class="home-screen-image">
+    <div class="image-container">
+      <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSc3S_16YMemKr0xz5gqIJgRFontagmpFDl5hCSIcsilQ7AjEb2fA" class="home-screen-image">
+    </div>
+    <div>
+      <button class="start-quiz-button myButton">Start Quiz</button>
+    </div>
+
+
+
+
+
+
+
 
   </main>
-  <button class="initialize-quiz-button">Start Quiz</button>
+
+  <footer>
+
+  </footer>
+  
 </body>
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script type="text/javascript" src="app.js"></script>
