added blue footer bar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,40 @@
     <h3>Welcome to the Sports Quizz.<br> This quiz contains 10 questions about various sports topics</h3>
   </header>
   <main>
-    <div class="image-container">
-      <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSc3S_16YMemKr0xz5gqIJgRFontagmpFDl5hCSIcsilQ7AjEb2fA" class="home-screen-image">
-    </div>
-    <div>
-      <button class="start-quiz-button myButton">Start Quiz</button>
-    </div>
+    <section class="quiz-introduction">
+      <div class="image-container">
+        <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSc3S_16YMemKr0xz5gqIJgRFontagmpFDl5hCSIcsilQ7AjEb2fA" class="home-screen-image">
+      </div>
+      <div>
+        <button class="start-quiz-button myButton">Start Quiz</button>
+      </div>
+    </section>
 
+    <section class="q-and-a hidden">
+      <h2></h2>
+      <p></p>
+    </section>
+
+    <section class="multiple-choice hidden">
+      <ul>
+        <li>
+          <p class="option" id="A">A</p>
+          <p class="answer"></p>
+        </li>
+        <li>
+          <p class="option" id="B">B</p>
+          <p class="answer"></p>
+        </li>
+        <li>
+          <p class="option" id="C">C</p>
+          <p class="answer"></p>
+        </li>
+        <li>
+          <p class="option" id="D">D</p>
+          <p class="answer"></p>
+        </li>
+      </ul>
+    </section>
 
 
 
