added pseudo code and add state object

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <header>
     <h1>Sports Quiz</h1>
     <h3>Welcome to the Sports Quizz.<br> This quiz contains 10 questions about various sports topics</h3>
+    <div class="progress-bar hidden">
+      <div class="current-progress"></div>
+    </div>
   </header>
   <main>
     <section class="quiz-introduction">
